tests/baselines/reference/shadowPrivateMembers.errors.txt
==== tests/cases/compiler/shadowPrivateMembers.ts (1 errors) ====
    class base { private n() {} }
    class derived extends base { private n() {} }
          ~~~~~~~
!!! shadowPrivateMembers.ts(2,7): error TS2141: Class 'derived' cannot extend class 'base':
!!! 	Types 'derived' and 'base' define property 'n' as private.
    